@@ -77,7 +77,7 @@ class JJTjUCMParserState {
     }
 
     void openNodeScope(Node n) {
-        marks.push(new Integer(mk));
+        marks.push(Integer.valueOf(mk));
         mk = sp;
         n.jjtOpen();
     }
